kubernetes/nextcloud-fpm/components/valkey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-valkey
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: nextcloud-valkey
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    app: nextcloud-valkey
    app.kubernetes.io/name: valkey
  type: ClusterIP
