kubernetes/nextcloud-fpm/components/valkey/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valkey-ingress
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: nextcloud-valkey
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      app: nextcloud-valkey
      app.kubernetes.io/name: valkey
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: ["nextcloud", "nextcloud-cron", "nextcloud-preview"]
      ports:
        - protocol: TCP
          port: 6379
